--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Assignment Solution for Module 2</title>
+    <link ref="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>The Quotes</h1>
+    <section class="section1">
+      <h2>Anonymous</h2>
+      The quick brown fox jumped over the lazy dog. This sentence contains all the alphabets of the English language. Check out for yourself and you will be surprised just incase you
+      have never come across it.
+    </section>
+    <section class="section2">
+      <h2>Theodore</h2>
+      It is not the critic who counts; not the man who points out how the strong man stumbles,or where the doer of deeds could have done them better. The credit belongs to the man
+      who is actuallt in the arena whose face is marred by dust and sweat; who strives valiantly; who errs, who comes short again and again, because there is no effort without error
+      and shortcoming;
+    </section>
+    <section class="section3">
+      <h2>Roosevelt</h2>
+      but who does actually strive to do the deeds; who knows great enthusiasms, the great devotions; who spends himself in a worthy cause; who at best k ows in the end the triump
+      of high achievement, and who at the worst, if he fails, at least fails while daring greatly, so that his place shall never be with those cold and timid souls who neighter 
+      know victory nor defeat.
+    </section>
+    
+  </body>
+</html>
